overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,10 @@ body {
   color: #fdefed;
 }
 
+.track {
+  overflow: hidden;
+}
+
 .marquee {
   position: relative;
   top: 5;
@@ -507,7 +511,6 @@ a:hover:after {
 
 .main-img {
   width: 100%;
-  background-color: black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -539,9 +542,10 @@ a:hover:after {
 
 footer {
   position: fixed;
+  overflow: hidden;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 80vh;
   padding: 0;
   margin: 0;
@@ -727,6 +731,8 @@ footer a:hover:after {
     width: 5rem;
     height: 5rem;
     font-size: 70%;
+    bottom: 0.5rem;
+    right: 1rem;
   }
   .about-text {
     width: 100%;
@@ -747,6 +753,9 @@ footer a:hover:after {
   .work-section {
     margin-bottom: 60vh;
   }
+  .description-container {
+    column-count: 1;
+  }
   footer {
     height: 60vh;
   }
@@ -762,7 +771,7 @@ footer a:hover:after {
   }
 }
 
-@media (max-width: 400px){
+@media (max-width: 420px){
   .title {
     font-size: 40%;
     height: 50%;
